# CroweTrade

./: .coverage  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  COINBASE_TEST_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOY_TO_CROWETRADE_COM.md  DEVELOPMENT_REPORT.md  DOMAIN_DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_DEPLOYMENT.md  ENHANCEMENT_SUMMARY.md  INTEGRATION_STATUS.md  PHASE1_COMPLETE.md  PRODUCTION_LAUNCH_GUIDE.md  README.md  SESSION_SUMMARY.md  activate_crypto_trading.py  coverage.xml  demo_crypto_trading.py  demo_live_trading.py  deploy-crowetrade.ps1  deploy-crowetrade.sh  deploy-fly-simple.sh  deploy-fly.ps1  deploy-fly.sh  dns-config.json  docker-compose.production.yml  docker-compose.yml  fly.api.toml  fly.execution.toml  fly.frontend.toml  fly.portfolio.toml  fly.toml  fly.web.toml  package-lock.json  package.json  (+8 more)
alerts/: router.yaml
artifacts/: pit_sample.parquet
config/: crypto_trading.yaml  development.yaml  production.yaml
crowe-lang-integration/: README.md
crowelang_integration/: CROWETRADE_INTEGRATION.md  README.md  ROADMAP.md  crowetrade-agent.crowe
docker/: Dockerfile.api  Dockerfile.execution  Dockerfile.frontend  Dockerfile.portfolio  Dockerfile.production  Dockerfile.web
docs/: BACKTESTING_FRAMEWORK.md  CNAME  DOMAIN_SETUP.md  IMPLEMENTATION_STATUS.md  MODEL_REGISTRY.md  index.html
environments/: .env.development  .env.production
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
helm/: Chart.yaml  values.yaml
k8s/: execution-agent.yaml  namespaces.yaml  portfolio-agent.yaml  production-deployment.yaml
observability/: grafana-dashboards.yaml  (+1 more)
proto/: exec.proto  (+3 more)
(+586 files in other folders)
